# edge-configbuilder

./: CHANGELOG.md  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
docs/: architecture.md
main/features/configbuilder/: Cargo.toml
main/features/configbuilder/config/: application.toml
main/features/configbuilder/docs/: README.md
main/features/configbuilder/examples/: load_section.rs
main/features/configbuilder/src/: lib.rs  spi.rs
main/features/configbuilder/src/api/: application_config_builder.rs  default_config_builder.rs  default_section_loader.rs  default_validator.rs  mod.rs  substitution.rs
main/features/configbuilder/src/core/: application_config_builder.rs  configbuilder.rs  default_config_builder.rs  default_section_loader.rs  default_validator.rs  loader.rs  mod.rs  substitution.rs  topology.rs  validator.rs
main/features/configbuilder/src/saf/: configbuilder_svc.rs  mod.rs
main/features/configbuilder/src/spi/: mod.rs
main/features/configbuilder/test/: configbuilder_svc_e2e_test.rs  default_config_builder_e2e_test.rs  default_validator_e2e_test.rs  facade_test.rs  substitution_error_test.rs  substitution_policy_e2e_test.rs  validator_e2e_test.rs
main/features/configbuilder/tests/: allow_all_policy_e2e_test.rs  application_config_builder_e2e_test.rs  composite_policy_e2e_test.rs  config_builder_bound_e2e_test.rs  config_builder_e2e_test.rs  config_builder_impl_e2e_test.rs  config_error_e2e_test.rs  config_loader_factory_int_test.rs  config_section_e2e_test.rs  configbuilder_svc_e2e_test.rs  default_config_builder_e2e_test.rs  default_section_loader_e2e_test.rs  default_validator_e2e_test.rs  facade_int_test.rs  feature_loader_e2e_test.rs  feature_metadata_e2e_test.rs  feature_record_builder_int_test.rs  feature_record_e2e_test.rs  feature_registry_e2e_test.rs  feature_state_e2e_test.rs  feature_summary_e2e_test.rs  load_in_order_e2e_test.rs  loaded_feature_e2e_test.rs  loader_e2e_test.rs  loader_ops_e2e_test.rs  on_error_e2e_test.rs  optional_section_e2e_test.rs  override_source_e2e_test.rs  path_validator_impl_e2e_test.rs  pattern_whitelist_policy_e2e_test.rs  prefix_whitelist_policy_e2e_test.rs  preflight_e2e_test.rs  preflight_issue_e2e_test.rs  preflight_issue_kind_e2e_test.rs  preflight_report_e2e_test.rs  raw_feature_e2e_test.rs  section_loader_bound_e2e_test.rs  section_loader_e2e_test.rs  section_loader_impl_e2e_test.rs  section_loader_int_test.rs  (+10 more)
scm/: .gitignore  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
scm/docs/: README.md  architecture.md
scm/examples/: load_section.rs
scm/main/src/: lib.rs
scm/main/src/api/: mod.rs
scm/main/src/api/configbuilder/: mod.rs
scm/main/src/api/error/: mod.rs
scm/main/src/api/loader/: mod.rs
scm/main/src/api/preflight/: mod.rs
scm/main/src/api/substitution/: mod.rs  substituter.rs
scm/main/src/api/validator/: mod.rs
scm/main/src/core/: mod.rs
scm/main/src/core/configbuilder/: config_builder_impl.rs  default_config_builder.rs  mod.rs  substitution_config_builder_impl.rs
scm/main/src/core/loader/: default_section_loader.rs  mod.rs
scm/main/src/core/preflight/: mod.rs
scm/main/src/core/substitution/: mod.rs  substituter.rs
scm/main/src/core/validator/: default_validator.rs  mod.rs
scm/main/src/saf/: builder_finalizer_svc_factory.rs  config_builder_bound_svc_factory.rs  config_builder_init_svc_factory.rs  config_builder_svc_factory.rs  config_section_svc_factory.rs  configbuilder_impl_svc.rs  configbuilder_svc.rs  feature_loader_svc_factory.rs  feature_record_builder_ops_svc_factory.rs  feature_registry_ops_svc_factory.rs  feature_state_ops_svc_factory.rs  feature_summary_ops_svc_factory.rs  loader_ops_svc_factory.rs  loader_svc_factory.rs  mod.rs  optional_section_svc.rs  optional_section_svc_factory.rs  policy_catalog_svc_factory.rs  preflight_issue_kind_ops_svc_factory.rs  preflight_report_ops_svc_factory.rs  preflight_svc_factory.rs  section_loader_bound_svc_factory.rs  substituter_svc.rs  substituter_svc_factory.rs  substitution_policy_svc_factory.rs  topology_ops_svc_factory.rs  validator_bound_svc_factory.rs  validator_ops_svc_factory.rs  validator_svc_factory.rs
scm/main/src/saf/config/: config_builder_bound_svc.rs  config_builder_svc.rs  config_section_svc.rs  mod.rs
scm/main/src/saf/configbuilder/: factory.rs  mod.rs  svc.rs
scm/main/src/saf/feature/: loader_svc.rs  mod.rs
scm/main/src/saf/loader/: loader_ops_svc.rs  loader_svc.rs  mod.rs
scm/main/src/saf/optional/: mod.rs
scm/main/src/saf/policy/: catalog_svc.rs  mod.rs
scm/main/src/saf/preflight/: mod.rs  svc.rs
scm/main/tests/: configbuilder_factory_int_test.rs
scm/scripts/ci/: build.sh  lint.sh  test.sh
scm/scripts/hooks/: pre-commit
scm/tests/: allow_all_policy_e2e_test.rs  application_config_builder_e2e_test.rs  builder_finalizer_int_test.rs  builder_finalizer_svc_factory_int_test.rs  composite_policy_e2e_test.rs  config_builder_bound_e2e_test.rs  config_builder_bound_svc_factory_int_test.rs  config_builder_bound_svc_int_test.rs  config_builder_e2e_test.rs  config_builder_impl_e2e_test.rs  config_builder_init_int_test.rs  config_builder_init_svc_factory_int_test.rs  config_builder_svc_factory_int_test.rs  config_builder_svc_int_test.rs  config_error_e2e_test.rs  config_loader_factory_int_test.rs  config_section_e2e_test.rs  config_section_svc_factory_int_test.rs  config_section_svc_int_test.rs  configbuilder_svc_e2e_test.rs  facade_int_test.rs  feature_loader_e2e_test.rs  feature_loader_svc_factory_int_test.rs  feature_loader_svc_int_test.rs  feature_record_builder_int_test.rs  feature_record_builder_ops_int_test.rs  feature_record_builder_ops_svc_factory_int_test.rs  feature_record_e2e_test.rs  feature_registry_e2e_test.rs  feature_registry_ops_int_test.rs  feature_registry_ops_svc_factory_int_test.rs  feature_state_e2e_test.rs  feature_state_ops_int_test.rs  feature_state_ops_svc_factory_int_test.rs  feature_summary_e2e_test.rs  feature_summary_ops_int_test.rs  feature_summary_ops_svc_factory_int_test.rs  load_in_order_e2e_test.rs  loaded_feature_e2e_test.rs  loader_e2e_test.rs  (+52 more)
(+333 files in other folders)
