[package]
name             = "swe-edge-configbuilder"
version          = "0.1.0"
edition          = "2021"
license          = "MIT OR Apache-2.0"
rust-version     = "1.95"
authors          = ["SWE Engineering Labs"]
repository       = "https://github.com/sweengineeringlabs/edge"
description      = "Standalone, runtime-independent TOML section loader for swe-edge services."
keywords         = ["config", "toml", "xdg", "loader", "swe"]
categories       = ["config"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "config"

[lib]
name = "swe_edge_configbuilder"
path = "main/src/lib.rs"

[features]
## Exposes `AllowAllPolicy` for use in tests.
##
## Add to `[dev-dependencies]` only:
##   swe-edge-configbuilder = { ..., features = ["test-utils"] }
##
## Never enable in `[dependencies]` — `AllowAllPolicy` bypasses all variable
## restrictions and must not reach production binaries.
test-utils = []

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
thiserror = "2"
regex     = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[[example]]
name = "load_section"
path = "examples/load_section.rs"

[[test]]
name = "config_section_e2e_test"
path = "tests/config_section_e2e_test.rs"

[[test]]
name = "feature_summary_e2e_test"
path = "tests/feature_summary_e2e_test.rs"

[[test]]
name = "allow_all_policy_e2e_test"
path = "tests/allow_all_policy_e2e_test.rs"
required-features = ["test-utils"]

[[test]]
name = "composite_policy_e2e_test"
path = "tests/composite_policy_e2e_test.rs"
required-features = ["test-utils"]

[[test]]
name = "pattern_whitelist_policy_e2e_test"
path = "tests/pattern_whitelist_policy_e2e_test.rs"

[[test]]
name = "prefix_whitelist_policy_e2e_test"
path = "tests/prefix_whitelist_policy_e2e_test.rs"

[[test]]
name = "preflight_issue_e2e_test"
path = "tests/preflight_issue_e2e_test.rs"

[[test]]
name = "preflight_issue_kind_e2e_test"
path = "tests/preflight_issue_kind_e2e_test.rs"

[[test]]
name = "substituter_e2e_test"
path = "tests/substituter_e2e_test.rs"
required-features = ["test-utils"]

[[test]]
name = "section_loader_impl_e2e_test"
path = "tests/section_loader_impl_e2e_test.rs"

[[test]]
name = "path_validator_impl_e2e_test"
path = "tests/path_validator_impl_e2e_test.rs"

[[test]]
name = "config_builder_impl_e2e_test"
path = "tests/config_builder_impl_e2e_test.rs"

[[test]]
name = "substitution_config_builder_impl_e2e_test"
path = "tests/substitution_config_builder_impl_e2e_test.rs"
required-features = ["test-utils"]

[[test]]
name = "loader_ops_e2e_test"
path = "tests/loader_ops_e2e_test.rs"

[[test]]
name = "validator_ops_e2e_test"
path = "tests/validator_ops_e2e_test.rs"

[[test]]
name = "raw_feature_e2e_test"
path = "tests/raw_feature_e2e_test.rs"

[[test]]
name = "feature_record_builder_int_test"
path = "tests/feature_record_builder_int_test.rs"

[[test]]
name = "config_loader_factory_int_test"
path = "tests/config_loader_factory_int_test.rs"

[[test]]
name = "substitution_policy_e2e_test"
path = "tests/substitution_policy_e2e_test.rs"
required-features = ["test-utils"]
