[package]
name             = "swe-edge-configbuilder"
version      = "0.3.0"
edition          = "2021"
license          = "MIT OR Apache-2.0"
rust-version     = "1.95"
authors          = ["SWE Engineering Labs"]
repository       = "https://github.com/sweengineeringlabs/edge"
description      = "Standalone, runtime-independent TOML section loader for swe-edge services."
keywords         = ["config", "toml", "xdg", "loader", "swe"]
categories       = ["config"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "config"

[lib]
name = "swe_edge_configbuilder"
path = "main/src/lib.rs"

[features]
## Exposes `AllowAllPolicy` for use in tests.
##
## Add to `[dev-dependencies]` only:
##   swe-edge-configbuilder = { ..., features = ["test-utils"] }
##
## Never enable in `[dependencies]` — `AllowAllPolicy` bypasses all variable
## restrictions and must not reach production binaries.
test-utils = []

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
thiserror = "2"
regex     = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[[example]]
name = "load_section"
path = "examples/load_section.rs"
