[package]
name             = "swe-edge-configbuilder"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "Standalone, runtime-independent TOML section loader for swe-edge services."
keywords     = ["config", "toml", "xdg", "loader", "swe"]
categories   = ["config"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "config"

[lib]
name = "swe_edge_configbuilder"
path = "src/lib.rs"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
thiserror = "2"
regex     = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[test]]
name = "section_loader_int_test"
path = "test/section_loader_int_test.rs"

[[test]]
name = "section_loader_e2e_test"
path = "test/section_loader_e2e_test.rs"

[[test]]
name = "config_error_e2e_test"
path = "test/config_error_e2e_test.rs"

[[test]]
name = "validator_e2e_test"
path = "test/validator_e2e_test.rs"

[[test]]
name = "traits_e2e_test"
path = "test/traits_e2e_test.rs"

[[test]]
name = "configbuilder_svc_e2e_test"
path = "test/configbuilder_svc_e2e_test.rs"

[[test]]
name = "loader_e2e_test"
path = "test/loader_e2e_test.rs"

[[test]]
name = "config_builder_e2e_test"
path = "test/config_builder_e2e_test.rs"

[[test]]
name = "application_config_builder_e2e_test"
path = "test/application_config_builder_e2e_test.rs"

[[test]]
name = "default_config_builder_e2e_test"
path = "test/default_config_builder_e2e_test.rs"

[[test]]
name = "default_section_loader_e2e_test"
path = "test/default_section_loader_e2e_test.rs"

[[test]]
name = "default_validator_e2e_test"
path = "test/default_validator_e2e_test.rs"

[[test]]
name = "substitution_policy_e2e_test"
path = "test/substitution_policy_e2e_test.rs"

[[example]]
name = "load_section"
path = "examples/load_section.rs"
