[package]
name             = "swe-edge-configbuilder"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "Standalone, runtime-independent TOML section loader for swe-edge services."
keywords     = ["config", "toml", "xdg", "loader", "swe"]
categories   = ["config"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "config"

[lib]
name = "swe_edge_configbuilder"
path = "src/lib.rs"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
thiserror = "2"
regex     = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[example]]
name = "load_section"
path = "examples/load_section.rs"
