[package]
name             = "swe-edge-configbuilder"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "Standalone, runtime-independent TOML section loader for swe-edge services."
keywords     = ["config", "toml", "xdg", "loader", "swe"]
categories   = ["config"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "config"

[lib]
name = "swe_edge_configbuilder"
path = "src/lib.rs"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
thiserror = "2"
regex     = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[[example]]
name = "load_section"
path = "examples/load_section.rs"

[[test]]
name = "config_section_e2e_test"
path = "tests/config_section_e2e_test.rs"

[[test]]
name = "feature_summary_e2e_test"
path = "tests/feature_summary_e2e_test.rs"

[[test]]
name = "allow_all_policy_e2e_test"
path = "tests/allow_all_policy_e2e_test.rs"

[[test]]
name = "composite_policy_e2e_test"
path = "tests/composite_policy_e2e_test.rs"

[[test]]
name = "pattern_whitelist_policy_e2e_test"
path = "tests/pattern_whitelist_policy_e2e_test.rs"

[[test]]
name = "prefix_whitelist_policy_e2e_test"
path = "tests/prefix_whitelist_policy_e2e_test.rs"

[[test]]
name = "preflight_issue_e2e_test"
path = "tests/preflight_issue_e2e_test.rs"

[[test]]
name = "preflight_issue_kind_e2e_test"
path = "tests/preflight_issue_kind_e2e_test.rs"

[[test]]
name = "substituter_e2e_test"
path = "tests/substituter_e2e_test.rs"

[[test]]
name = "section_loader_impl_e2e_test"
path = "tests/section_loader_impl_e2e_test.rs"

[[test]]
name = "path_validator_impl_e2e_test"
path = "tests/path_validator_impl_e2e_test.rs"

[[test]]
name = "config_builder_impl_e2e_test"
path = "tests/config_builder_impl_e2e_test.rs"

[[test]]
name = "substitution_config_builder_impl_e2e_test"
path = "tests/substitution_config_builder_impl_e2e_test.rs"

[[test]]
name = "loader_ops_e2e_test"
path = "tests/loader_ops_e2e_test.rs"

[[test]]
name = "validator_ops_e2e_test"
path = "tests/validator_ops_e2e_test.rs"

[[test]]
name = "raw_feature_e2e_test"
path = "tests/raw_feature_e2e_test.rs"
